# tauri2-vue3-vite

./: LICENSE  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
