[package]
name = "chrome-server-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chrome_server_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
warp = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }  # 引入 tokio 来支持异步操作
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.17"
bytes = "1.4"  # 请根据需要选择合适的版本
hyper = "0.14"  
http = "0.2"  
